--- a/deployments/deployment.yaml
+++ b/deployments/deployment.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: net-attach-def-admission-controller
-        image: aneeshkp/net-attach-def-admission-controller:snapshot
+        image: nfvpe/net-attach-def-admission-controller:snapshot
         command:
         - ./bin/webhook
         args:
@@ -37,11 +37,12 @@ spec:
         - -tls-private-key-file=/etc/webhook/key.pem
         - -tls-cert-file=/etc/webhook/cert.pem
         - -alsologtostderr=true
+        - -metrics-listen-address=0.0.0.0:9091
         volumeMounts:
         - name: webhook-certs
           mountPath: /etc/webhook
           readOnly: True
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
       serviceAccountName: net-attach-def-admission-controller-sa
       volumes:
       - name: webhook-certs
